docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesUserPreference__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AccessLevel__c</fullName>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Commenter</fullName>
                    <default>true</default>
                    <label>Commenter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Preferences__c</fullName>
        <label>Preferences</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales User Preferences</relationshipLabel>
        <relationshipName>SalesUserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales User Preferences</relationshipLabel>
        <relationshipName>SalesUserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Planning Preferences</relationshipLabel>
        <relationshipName>SalesPlanningPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales User Preference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>